--- a/style.css
+++ b/style.css
@@ -23,11 +23,11 @@ body {
   line-height: 42px;
 }
 
-#navegacao-principal {
+#navegacao_principal {
   margin-left: 10px;
 }
 
-#navegacao-principal li {
+#navegacao_principal li {
   display: inline-block;
   font-family: monospace;
   font-size: 20px;
@@ -36,24 +36,43 @@ body {
   margin-bottom: 10px;
 }
 
-#navegacao-principal li:hover {
+#navegacao_principal li:hover {
   border: dashed 3px white;
   color: white;
 }
 
-#figura-ao-lado {
+#figura_ao_lado {
   float: right;
   background-image: url(pimentinhas.png);
   background-position: 50%;
   width: 300px;
-  height: 800px;
+  height: 768px;
 }
 
 #minha_foto {
   display: none;
 }
 
+#listas {
+  margin-bottom: 20px;
+  padding-top: 150px;
+}
+
+#listas h2 {
+  margin: 0 0 20px 40px;
+}
+
 .licoes{
   display: inline-block;
   list-style: none;
+  margin-left: 40px;
+}
+
+.lado-esquerdo, .lado-direito {
+  display: inline-block;
+  width: 450px;
+  vertical-align: top;
+  padding: 10px;
+  margin: 10px;
+  border: black 4px double;
 }
