--- a/style.css
+++ b/style.css
@@ -13,13 +13,13 @@ body {
   right: 0;
   left: 0;
   background-color: brown;
-  font-weight: bold;
+  font-weight: 600;
 }
 
 #titulo {
   text-align: center;
   padding-top: 15px;
-  font-family: 'Montserrat Alternates', sans-serif;
+  font-family: "Montserrat Alternates", sans-serif;
   line-height: 42px;
 }
 
@@ -43,7 +43,7 @@ body {
 
 #figura_ao_lado {
   float: right;
-  background-image: url(pimentinhas.png);
+  background-image: url("pimentinhas.png");
   background-position: 50%;
   width: 300px;
   height: 768px;
@@ -62,13 +62,13 @@ body {
   margin: 0 0 20px 40px;
 }
 
-.licoes{
+.licoes {
   display: inline-block;
   list-style: none;
   margin-left: 40px;
 }
 
-.lado-esquerdo, .lado-direito {
+.lado-esquerdo , .lado-direito {
   display: inline-block;
   width: 450px;
   vertical-align: top;
