Corrige erros do Lint.

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 #titulo {
   text-align: center;
   padding-top: 15px;
-  font-family: 'Montserrat Alternates', sans-serif;
+  font-family: Montserrat Alternates, sans-serif;
   line-height: 42px;
 }
 
